# preswald

./: .gitignore  build_frontend.py  pyproject.toml
community_gallery/: Pokedex
community_gallery/pokedex_insights/: README.md  hello.py  preswald.toml
preswald/: __init__.py  deploy.py
